refact: split create and update artist in two endpoints following restfull api aproach
