# app/Http/Controllers/ArtistController.php
@@ -6,8 +6,10 @@ namespace App\Http\Controllers;
 
 use App\Application\Commands\CreateOrUpdateArtistCommand;
 use App\Application\CreateOrUpdateArtistUseCase;
-use App\Http\Requests\CreateOrUpdateArtistRequest;
-use App\Http\Responses\CreateOrUpdateArtistResponse;
+use App\Http\Requests\CreateArtistRequest;
+use App\Http\Requests\UpdateArtistRequest;
+use App\Http\Responses\CreateArtistResponse;
+use App\Http\Responses\updateArtistResponse;
 use Illuminate\Http\Request;
 use Symfony\Component\HttpFoundation\Response;
 
@@ -23,33 +25,65 @@ class ArtistController extends Controller
     /**
      * @OA\Post(
      *      path="/api/artist",
-     *      operationId="createOrUpdate",
+     *      operationId="create",
      *      tags={"Artist"},
-     *      summary="Create or Update an Artist",
-     *      description="Returns an Artist created or updated",
+     *      summary="Create an Artist",
+     *      description="Returns an Artist created",
      *      @OA\RequestBody(
      *          required=true,
-     *          @OA\JsonContent(ref="#/components/schemas/CreateOrUpdateArtistRequest")
+     *          @OA\JsonContent(ref="#/components/schemas/CreateArtistRequest")
      *      ),
      *      @OA\Response(
      *          response=201,
      *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/CreateOrUpdateArtistResponse")
+     *          @OA\JsonContent(ref="#/components/schemas/CreateArtistResponse")
      *       ),
      *      @OA\Response(
      *          response=422,
      *          description="Validation error",
      *      ),
      * )
-     * @param CreateOrUpdateArtistRequest $request
+     * @param CreateArtistRequest $request
      * @return Response
      */
-    public function createOrUpdate(CreateOrUpdateArtistRequest $request)
+    public function create(CreateArtistRequest $request)
     {
         $createOrUpdateCommand = new CreateOrUpdateArtistCommand($request->getAttributes());
         $artist = $this->createOrUpdate->execute($createOrUpdateCommand);
 
-        return $this->respond(CreateOrUpdateArtistResponse::convertToJson($artist));
+        return $this->respondWithCreated(CreateArtistResponse::convertToJson($artist));
+    }
+
+    /**
+     * @OA\Put(
+     *      path="/api/artist",
+     *      operationId="update",
+     *      tags={"Artist"},
+     *      summary="Update an Artist",
+     *      description="Returns an Artist updated",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/UpdateArtistRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/UpdateArtistResponse")
+     *       ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Validation error",
+     *      ),
+     * )
+     * @param UpdateArtistRequest $request
+     * @return Response
+     */
+    public function update(UpdateArtistRequest $request)
+    {
+        $createOrUpdateCommand = new CreateOrUpdateArtistCommand($request->getAttributes());
+        $artist = $this->createOrUpdate->execute($createOrUpdateCommand);
+
+        return $this->respondWithCreated(UpdateArtistResponse::convertToJson($artist));
     }
 
     /**
